# openapi.json
@@ -264,7 +264,8 @@
             "schema": {
               "enum": [
                 "vosk",
-                "whisper"
+                "whisper",
+                "reazonspeech"
               ],
               "type": "string",
               "title": "Backend"
@@ -388,7 +389,8 @@
             "schema": {
               "enum": [
                 "vosk",
-                "whisper"
+                "whisper",
+                "reazonspeech"
               ],
               "type": "string",
               "title": "Backend"
@@ -3013,7 +3015,8 @@
             "type": "string",
             "enum": [
               "vosk",
-              "whisper"
+              "whisper",
+              "reazonspeech"
             ],
             "title": "Backend"
           },
@@ -3060,7 +3063,8 @@
             "type": "string",
             "enum": [
               "vosk",
-              "whisper"
+              "whisper",
+              "reazonspeech"
             ],
             "title": "Backend"
           },
